Fixes a DCHECK in tools_menu_button_observer_bridge during tests

A DCHECK was observed during omnibox_perftest. It traces down to
-[ToolsMenuButtonObserverBridge readingListModelBeingDeleted:] being
called twice and the second call triggered the DCHECK.

DependencyManager::DestroyContextServices() calls ContextShutdown()
and then ContextDestroyed() on all dependencies. Each of the call
entered -readingListModelBeingDeleted: because there is no distinction
between Shutdown and Destroyed.

BUG=717300

Review-Url: https://codereview.chromium.org/2863303002
Cr-Commit-Position: refs/heads/master@{#472825}

Former-commit-id: 52ab15efe9499088cd3c2a2474887671630b0311